<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.atena.atenatest.MainActivity">

    <TextView
        android:id="@+id/hello_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello Atena!"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/search_title"
        android:layout_below="@+id/hello_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        />


    <EditText
        android:id="@+id/search_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/search_title"
        android:hint="@string/search_hint"
        />

    <Button
        android:id="@+id/search_button"
        android:layout_below="@id/search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        />

    <LinearLayout
        android:id="@+id/list_header"
        android:layout_below="@id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/list_title"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/list_height"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/list_width"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/photo_list"
        android:layout_below="@id/list_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</RelativeLayout>
